[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/First Day/SuppliesScenes/LemonProductContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/First Day/SuppliesScenes/WaterProductContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/First Day/SuppliesScenes/SugarProductContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/First Day/SuppliesScenes/CupProdcutContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/First Day/SuppliesScenes/SuppliesSceneHandler.gd" type="Script" id=5]

[node name="SuppliesContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 23
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuppliesHeader" type="Label" parent="."]
margin_right = 1366.0
margin_bottom = 14.0
text = "Supplies"
align = 1

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 37.0
margin_right = 1366.0
margin_bottom = 105.0
custom_constants/vseparation = 20
custom_constants/hseparation = 60
columns = 2

[node name="WaterProductContainer" parent="GridContainer" instance=ExtResource( 2 )]
margin_right = 487.0

[node name="LemonProductContainer" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 547.0
margin_right = 1040.0

[node name="SugarProductContainer" parent="GridContainer" instance=ExtResource( 3 )]
margin_top = 44.0
margin_right = 487.0
margin_bottom = 68.0

[node name="CupProdcutContainer" parent="GridContainer" instance=ExtResource( 4 )]
margin_left = 547.0
margin_top = 44.0
margin_right = 1040.0
margin_bottom = 68.0

[node name="TotalCost" type="Label" parent="."]
margin_top = 128.0
margin_right = 1366.0
margin_bottom = 142.0
text = "The total cost of these items is: $999.00"

[node name="Button" type="Button" parent="."]
margin_left = 633.0
margin_top = 165.0
margin_right = 733.0
margin_bottom = 265.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
text = "Purchase"

[node name="Debug" type="VBoxContainer" parent="."]
margin_top = 288.0
margin_right = 1366.0
margin_bottom = 768.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Debug"]
margin_right = 1366.0
margin_bottom = 14.0
text = "Debug"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Debug"]
margin_top = 18.0
margin_right = 1366.0
margin_bottom = 480.0
size_flags_vertical = 3
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="GridContainer" type="GridContainer" parent="Debug/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/hseparation = 135
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waters" type="Label" parent="Debug/ColorRect/GridContainer"]
margin_right = 107.0
margin_bottom = 14.0
text = "# of tap waters ="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lemons" type="Label" parent="Debug/ColorRect/GridContainer"]
margin_left = 242.0
margin_right = 366.0
margin_bottom = 14.0
text = "# of lemon juices ="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cups" type="Label" parent="Debug/ColorRect/GridContainer"]
margin_top = 18.0
margin_right = 107.0
margin_bottom = 32.0
text = "# of cups ="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sugars" type="Label" parent="Debug/ColorRect/GridContainer"]
margin_left = 242.0
margin_top = 18.0
margin_right = 366.0
margin_bottom = 32.0
text = "# of sugars ="
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
